Changing the default todos

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <input type="text" placeholder="Add New Todo">
 
         <ul>
-            <li><span><i class="fas fa-trash"></i></span> Go to Potions Class</li>
-            <li><span><i class="fas fa-trash"></i></span> New Robe</li>
-            <li><span><i class="fas fa-trash"></i></span> Visit Hagrid</li>
+            <li><span><i class="fas fa-trash"></i></span> Wash clothes</li>
+            <li><span><i class="fas fa-trash"></i></span> Pick-up Marcie</li>
+            <li><span><i class="fas fa-trash"></i></span> Write some code</li>
         </ul>
     </div>
 <script type="text/javascript" src="assets/js/todos.js"></script>
