Change the last todo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
             <li><span><i class="fas fa-trash"></i></span> Wash clothes</li>
             <li><span><i class="fas fa-trash"></i></span> Pick-up Marcie</li>
-            <li><span><i class="fas fa-trash"></i></span> Write some code</li>
+            <li><span><i class="fas fa-trash"></i></span> Go to gym</li>
         </ul>
     </div>
 <script type="text/javascript" src="assets/js/todos.js"></script>
