changing the todos again

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <ul>
             <li><span><i class="fas fa-trash"></i></span> Wash clothes</li>
-            <li><span><i class="fas fa-trash"></i></span> Pick-up Marcie</li>
+            <li><span><i class="fas fa-trash"></i></span> Pick-up John</li>
             <li><span><i class="fas fa-trash"></i></span> Go to gym</li>
         </ul>
     </div>
